# MANU_Project

./: .gitignore  DOCUMENTATION_COMPLETE.md  EXECUTION_STATUS.md  MOLCLR_PRETRAINED_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  REPRODUCIBILITY_CHECKLIST.md  bash.exe.stackdump  benchmark_report.py  config_benchmark.json  config_benchmark.yaml  environment.yml  pyproject.toml  requirements.txt  run_all_hpo.py  run_foundation_benchmark.sh  setup.py
.claude/: settings.local.json
GNN_test/: enhanced_molecular_gnn_ALL_20250917_141709.csv  enhanced_molecular_gnn_Clearance_Hepatocyte_AZ_20250917_132547.csv  enhanced_molecular_gnn_Clearance_Hepatocyte_AZ_20250917_141010.csv  enhanced_molecular_gnn_Clearance_Hepatocyte_AZ_20250917_141702.csv  enhanced_molecular_gnn_Clearance_Microsome_AZ_20250917_132659.csv  enhanced_molecular_gnn_Clearance_Microsome_AZ_20250917_141454.csv  enhanced_molecular_gnn_Half_Life_Obach_20250917_123116.csv  enhanced_molecular_gnn_Half_Life_Obach_20250917_140953.csv  enhanced_molecular_gnn_Half_Life_Obach_20250917_141655.csv  final_fixed_molecular_gnn_Half_Life_Obach_20250918_125158.csv  fixed_molecular_gnn_ALL_20250918_100608.csv  fixed_molecular_gnn_ALL_20250918_163607.csv  fixed_molecular_gnn_Clearance_Hepatocyte_AZ_20250918_093432.csv  fixed_molecular_gnn_Clearance_Microsome_AZ_20250918_100608.csv  fixed_molecular_gnn_Clearance_Microsome_AZ_20250918_163607.csv  fixed_molecular_gnn_Half_Life_Obach_20250918_080833.csv  fixed_molecular_gnn_Half_Life_Obach_20250918_103613.csv  fixed_molecular_gnn_Half_Life_Obach_20250918_131858.csv  optimized_gnn.py  (+6 more)
(+316 files in other folders)
